# backpacktf-api

./: .gitignore  Cargo.toml  README.md
benches/: deserialize.rs
examples/: archived_listings.rs  create_listing.rs  delete_archived_listing.rs  delete_archived_listings.rs  force_retry_after.rs  get_all_listings.rs  spam_listings.rs  update_listings.rs  websocket.rs
src/: api.rs  backpack_api.rs  currency_type.rs  error.rs  lib.rs  listing_intent.rs  time.rs  websocket.rs
src/api/: api.rs  api_response.rs  backpack_api.rs  error.rs  helpers.rs  mod.rs  response.rs
src/api/fixtures/: delete_listings.json  get_alerts.json  get_classifieds_snapshot.json  get_listings.json  get_notifications.json
src/builder/: api_builder.rs  middleware.rs  mod.rs
src/request/: alert.rs  currencies.rs  mod.rs  serializers.rs
src/request/alert/: create_alert.rs  mod.rs
src/request/listing/: create_listing.rs  mod.rs  sell_listing.rs  update_listing.rs
src/request/listing/buy_listing/: buy_listing.rs  item.rs  item_attributes.rs  item_params.rs  mod.rs  serializers.rs  traits.rs
src/request/listing/create_listing/: create_listing.rs  mod.rs
src/request/listing/create_listing/buy_listing/: item.rs  item_attribute.rs  item_params.rs  mod.rs  serializers.rs  traits.rs
src/request/notification/: get_notification.rs  mod.rs
src/response/: agent.rs  attributes.rs  classifieds_limits.rs  currencies.rs  cursor.rs  deserializers.rs  mod.rs  player.rs  serializers.rs
src/response/agent/: mod.rs  status.rs
src/response/alert/: alert.rs  min_max.rs  mod.rs  price.rs
src/response/fixtures/: player.json
src/response/inventory/: mod.rs  status.rs  values.rs
src/response/listing/: attributes.rs  batch_limit.rs  create_listing.rs  item.rs  listing.rs  mod.rs  status.rs  summary.rs  update_listing.rs  user.rs  user_agent.rs  value.rs
src/response/listing/create_listing/: create_listings_result.rs  error_listing.rs  mod.rs
src/response/listing/delete_listing/: delete_listings_result.rs  mod.rs
src/response/listing/fixtures/: Collector's Shortstop Chemistry Set.json  Strange Massed Flies Crone's Dome.json  hat_currencies.json  listing.json  missing_paint.json  not_enough_currency.json  recipe.json  spelled.json  unknown_status.json  user.json  websocket_listing.json  websocket_listing_csgo.json
src/response/notification/: bundle.rs  contents.rs  mod.rs  notification.rs
src/response/snapshot/: item.rs  listing.rs  mod.rs  snapshot.rs
src/response/snapshot/fixtures/: snapshot_listing_float_attribute.json  snapshot_listing_marketplace.json  snapshot_listing_string_attributes.json  snapshot_strange_professional_killstreak_australium_rocket_launcher.json
src/websocket/: handlers.rs  message.rs  mod.rs
tests/json/: get_notifications.json  get_users.json
