[package]
name = "backpacktf-api"
version = "0.1.0"
edition = "2021"
description = "Interface for backpack.tf API endpoints."
authors = ["Julia"]
homepage = "https://github.com/juliarose/backpacktf-api"
repository = "https://github.com/juliarose/backpacktf-api"
license = "MIT"
keywords = ["tf2", "steam"]
readme = "README.md"

[dependencies]
async-std = "1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
serde-enum-str = "0.3"
reqwest = { version = "^0.11", features = ["json", "cookies"] }
reqwest-retry = "^0.1"
reqwest-middleware = "^0.1"
url = "^2.2"
chrono = { version = "^0.4", features = ["serde"] }
anyhow = "^1.0"
num_enum = "^0.5.5"
strum = { version = "^0.23", features = ["derive"] }
strum_macros = "^0.23"
thiserror = "^1.0"
steamid-ng = "1.0.0"
tf2-enum = "^0.6"
tf2-price = "^0.10"
log = "0.4.17"
tokio = { version = "1", features = ["sync"], optional = true }
tokio-tungstenite = { version = "0.17", features = ["native-tls"], optional = true }
futures-util = { version = "0.3", optional = true }
serde_bytes = { version = "0.11", optional = true }

[features]
websocket = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:serde_bytes", "serde_json/raw_value"]

[dev-dependencies]
assert-json-diff = "^2.0.1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
criterion = "0.3"

[[bench]]
name = "deserialize"
harness = false
