[package]
name = "backpacktf-api"
version = "0.1.0"
edition = "2021"
description = "Interface for backpack.tf API endpoints."
authors = ["Julia"]
homepage = "https://github.com/juliarose/backpacktf-api"
repository = "https://github.com/juliarose/backpacktf-api"
license = "MIT"
keywords = ["tf2", "steam"]
readme = "README.md"

[dependencies]
anyhow = "^1.0"
async-std = "1"
chrono = { version = "^0.4", features = ["serde"] }
log = "^0.4"
num_enum = "^0.7"
reqwest = { version = "^0.12", features = ["json", "cookies", "gzip", "http2", "native-tls-alpn"], default-features = false }
reqwest-middleware = { version = "^0.4", features = ["json"] }
reqwest-retry = "^0.7"
serde = { version = "^1.0", features = ["derive"] }
serde-enum-str = "0.3"
serde_json = "^1.0"
serde_repr = "^0.1"
steamid-ng = "^1.0"
strum = { version = "^0.24", features = ["derive"] }
strum_macros = "^0.24"
tf2-enum = "^0.13"
tf2-price = { version = "^0.14", features = ["serde"] }
thiserror = "^2"
url = "^2.5"

# Required for websocket feature
bytes = { version = "^1.0", optional = true }
data-encoding = { version = "^2.9", optional = true }
futures-util = { version = "^0.3", optional = true }
http = { version = "^1.3", optional = true }
rand = { version = "^0.9", optional = true }
serde_bytes = { version = "^0.11", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
tokio-tungstenite = { version = "^0.27", optional = true }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite?/native-tls"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots", "tokio-tungstenite?/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots", "tokio-tungstenite?/rustls-tls-webpki-roots"]
websocket = ["dep:tokio", "dep:http", "dep:rand", "dep:data-encoding", "dep:tokio-tungstenite", "dep:futures-util", "dep:serde_bytes", "serde_json/raw_value", "dep:bytes"]

[dev-dependencies]
assert-json-diff = "^2.0.1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
criterion = "0.3"

[[bench]]
name = "deserialize"
harness = false

[[example]]
name = "websocket"
path = "examples/websocket.rs"
required-features = ["websocket"]